--- a/src/Xutim/Bundle/CoreBundle/templates/components/Admin/LanguageContextBar.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/components/Admin/LanguageContextBar.html.twig
@@ -7,7 +7,7 @@
     {# main languages #}
     {%
         set mainLanguages = site_context.locales
-        |filter(locale => app.user.canTranslate(locale))
+        |filter(locale => app.user.canTranslate(locale))|sort((loc1, loc2) => loc1 <=> loc2)
     %}
     {% if mainLanguages is not empty %}
         <div class="d-flex justify-content-end align-items-center mb-2">
