--- a/src/Xutim/Bundle/CoreBundle/templates/admin/article/_tags_sidebar_item.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/article/_tags_sidebar_item.html.twig
@@ -36,7 +36,7 @@
                 <div class="mb-2">
                     <div class="input-icon mb-2">
                         <span class="input-icon-addon">
-                            <twig:ux:icon name="search" class="text-white w-3 h-3" />
+                            <twig:ux:icon name="tabler:search" class="text-white w-3 h-3" />
                         </span>
                         <input
                             type="search"
