feat(core,ui): remove translate button if already on edit page

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/article/_article_sidebar.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/article/_article_sidebar.html.twig
@@ -21,17 +21,19 @@
                     }}
                 </twig:block>
             </twig:Xutim:Admin:SidebarItem>
-            <twig:Xutim:Admin:SidebarItem>
-                <twig:block name="content">
-                    <twig:Xutim:Admin:Button
-                        variant="primary"
-                        href="{{ admin_path('admin_article_edit', {id: article.id}) }}"
-                        tag="a"
-                    >
-                        {{ 'Add translation'|trans({}, 'admin') }}
-                    </twig:Xutim:Admin:Button>
-                </twig:block>
-            </twig:Xutim:Admin:SidebarItem>
+            {% if app.current_route != 'admin_article_edit' %}
+                <twig:Xutim:Admin:SidebarItem>
+                    <twig:block name="content">
+                        <twig:Xutim:Admin:Button
+                            variant="primary"
+                            href="{{ admin_path('admin_article_edit', {id: article.id}) }}"
+                            tag="a"
+                        >
+                            {{ 'Add translation'|trans({}, 'admin') }}
+                        </twig:Xutim:Admin:Button>
+                    </twig:block>
+                </twig:Xutim:Admin:SidebarItem>
+            {% endif %}
         </twig:Xutim:Admin:SidebarSection>
     {% endif %}
     {% if translation %}
