fix(core,ui): statuses cannot be changed

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/publication_status/_status_buttons.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/publication_status/_status_buttons.html.twig
@@ -5,7 +5,7 @@
         action="{{ admin_path(url, {id: id, status: status.value}) }}"
         confirmActionLabel="{{ confirmActionLabel }}"
         title="{{ confirmActionLabel }}"
-        data-controller="tooltip"
+        extraControllers="tooltip"
     >
         <twig:Xutim:Admin:Icon name="{{ iconName }}" plain="true" />
     </twig:Xutim:Admin:ModalDialog>
