--- a/src/Xutim/Bundle/CoreBundle/templates/admin/block/block_show.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/block/block_show.html.twig
@@ -123,6 +123,7 @@
                                 <th>{{ 'link'|trans({}, 'admin') }}</th>
                                 <th>{{ 'tag'|trans({}, 'admin') }}</th>
                                 <th>{{ 'snippet'|trans({}, 'admin') }}</th>
+                                <th>{{ 'media folder'|trans({}, 'admin') }}</th>
                                 <th class="w-12 text-center">
                                     {{ 'actions'|trans({}, 'admin') }}
                                 </th>
