feat(admin): Implement page/article edit split view.

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/content_translation/_form.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/content_translation/_form.html.twig
@@ -71,10 +71,7 @@
         })
     }}
 
-    <div class="mb-3">
-        <label for="content_translation_content" class="form-label">
-            Content
-        </label>
+    <div class="mb-3 mt-6">
         <div data-editorjs-form-target="editorHolder"></div>
     </div>
 
