--- a/src/Xutim/Bundle/CoreBundle/templates/admin/page/page_edit.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/page/page_edit.html.twig
@@ -5,7 +5,7 @@
 {% block pageTitle %}
     <twig:Xutim:Admin:Icon name="folder" />
     {%
-        set translation = page.translationByLocaleOrAny(content_context_language())
+        set translation = page.translationByLocaleOrDefault(content_context_language())
     %}
 
     {{ translatable.languageBadge(translation) }}
@@ -78,19 +78,6 @@
                         General
                     </twig:Xutim:Admin:Button>
                 </twig:Xutim:Admin:SidebarTab>
-                <twig:Xutim:Admin:SidebarTab target="translation-reference-tab">
-                    <twig:Xutim:Admin:Button
-                        variant="tab"
-                        type="a"
-                        data-bs-toggle="tab"
-                        href="#translation-reference-tab"
-                        role="tab"
-                        aria-controls="translation-reference-tab"
-                        aria-selected="false"
-                    >
-                        Translation Reference
-                    </twig:Xutim:Admin:Button>
-                </twig:Xutim:Admin:SidebarTab>
             </twig:Xutim:Admin:SidebarTabs>
         </twig:block>
         <twig:block name="content">
@@ -100,39 +87,198 @@
                         include('@XutimCore/admin/page/_page_sidebar.html.twig', {translation: translation})
                     }}
                 </div>
-                <div
-                    id="translation-reference-tab"
-                    class="tab-pane m-4"
-                    role="tabpanel"
-                >
-                    {% if translation != null %}
-                        {{
-                            include('@XutimCore/admin/page/page_translation_show.html.twig', {page: page, translation: translation})
-                        }}
-                    {% endif %}
-                </div>
             </div>
         </twig:block>
     </twig:Xutim:Admin:Sidebar>
 {% endblock %}
 
 {% block body %}
-    <div class="card mb-3">
-        <div class="card-body p-0">
-            <div class="tab-pane active show p-4">
-                {{
-                    include('@XutimCore/admin/content_translation/_form.html.twig', {
-                        disableEditing: not is_granted(constant('Xutim\\SecurityBundle\\Security\\UserRoles::ROLE_DEVELOPER')),
-                    })
-                }}
-                {%
-                    if not translation and page.translations|length > 0 and form.slug.vars.value is empty
-                %}
-                    {{
-                        include('@XutimCore/admin/page_translation/new_translation_modal.html.twig', {page: page})
-                    }}
+    <div
+        data-controller="split-view"
+        data-split-view-target="root"
+        data-split-view-reference-url-value="{{ admin_path('admin_json_content_translation_show', {id: page.defaultTranslation.id}) }}"
+        data-split-view-current-translation-id-value="{{ translation ? translation.id : '' }}"
+        class="card mb-3"
+        data-split-view-block-codes-value="{{ fetch_block_codes()|json_encode }}"
+        data-split-view-tags-value="{{ fetch_tags()|json_encode }}"
+        data-split-view-fetch-files-url-value="{{ admin_path('admin_json_file_list') }}"
+        data-split-view-fetch-all-files-url-value="{{ admin_path('admin_json_file_all_list') }}"
+        data-split-view-fetch-file-url-value="{{ admin_path('admin_json_file_show', {id: ':id:'}) }}"
+        data-split-view-fetch-images-url-value="{{ admin_path('admin_json_image_list') }}"
+        data-split-view-page-ids-url-value="{{ admin_path('admin_json_page_list') }}"
+        data-split-view-article-ids-url-value="{{ admin_path('admin_json_article_list') }}"
+        data-split-view-tag-ids-url-value="{{ admin_path('admin_json_tag_list') }}"
+        data-split-view-fetch-anchor-snippets-url-value="{{ admin_path('admin_json_snippet_list', {type: 'anchor'}) }}"
+    >
+        <div class="card-header d-flex align-items-center justify-content-between">
+            <div class="fw-bold">
+                {% if translation is null %}
+                    Translate into {{ content_context_language()|upper }}
+                {% else %}
+                    {{ translation.locale|upper }} translation
                 {% endif %}
             </div>
+
+            <div class="d-flex align-items-center gap-2">
+                <select
+                    class="form-select form-select-sm"
+                    data-split-view-target="localeSelect"
+                    data-action="change->split-view#loadReference"
+                    hidden
+                >
+                    {% for tr in page.translations %}
+                        <option
+                            value="{{ admin_path('admin_json_content_translation_show', {id: tr.id}) }}"
+                            {% if page.defaultTranslation.id == tr.id %}
+                                selected
+                            {% endif %}
+                        >
+                            {{ tr.locale|locale_name }}{%
+                                if page.defaultTranslation.id == tr.id
+                            %}
+                                — {{
+                                    'reference for translations'|trans({}, 'admin')
+                                }}{% endif %}
+                        </option>
+                    {% endfor %}
+                </select>
+
+                <twig:Xutim:Admin:Button
+                    tag="button"
+                    variant="default"
+                    class="btn-sm"
+                    data-split-view-target="localeSelectClipboard"
+                    data-action="split-view#copyAllBlocks"
+                    title="Copy all blocks"
+                    hidden
+                >
+                    <twig:ux:icon name="tabler:clipboard" class="w-3 h-3" />
+                </twig:Xutim:Admin:Button>
+
+                <twig:Xutim:Admin:Button
+                    tag="button"
+                    variant="default"
+                    class="text-dark d-flex align-items-center text-nowrap btn-sm"
+                    data-action="split-view#toggle"
+                    title="Toggle split view"
+                >
+                    <span
+                        data-split-view-target="iconOn"
+                        class="d-flex align-items-center"
+                    >
+                        <twig:ux:icon
+                            name="tabler:columns-2"
+                            class="w-3 h-3 me-1"
+                        />
+                        Split view
+                    </span>
+
+                    <span
+                        data-split-view-target="iconOff"
+                        class="d-none d-flex align-items-center"
+                    >
+                        <twig:ux:icon
+                            name="tabler:columns-1"
+                            class="w-3 h-3 me-1"
+                        />
+                        Single view
+                    </span>
+                </twig:Xutim:Admin:Button>
+            </div>
         </div>
+
+        <div class="card-body p-0">
+            <div class="row g-0" data-split-view-target="container">
+                <div class="col-12 p-4" data-split-view-target="left">
+                    {{
+                        include('@XutimCore/admin/content_translation/_form.html.twig', {
+                        disableEditing: not is_granted(constant('Xutim\\SecurityBundle\\Security\\UserRoles::ROLE_DEVELOPER')),
+                    })
+                    }}
+                </div>
+
+                <div
+                    class="col-12 col-lg-6 border-start d-none p-4"
+                    data-split-view-target="right"
+                >
+                    <div class="mb-3">
+                        <label class="form-label">Intro title</label>
+                        <input
+                            type="text"
+                            class="form-control text-bg-light"
+                            readonly
+                            value="{{ page.defaultTranslation.pretitle }}"
+                            data-split-view-target="metaPretitle"
+                        />
+                    </div>
+
+                    <div class="mb-3">
+                        <label class="form-label">Title</label>
+                        <input
+                            type="text"
+                            class="form-control text-bg-light"
+                            readonly
+                            value="{{ page.defaultTranslation.title }}"
+                            data-split-view-target="metaTitle"
+                        />
+                    </div>
+
+                    <div class="mb-3">
+                        <label class="form-label">Subtitle</label>
+                        <input
+                            type="text"
+                            class="form-control text-bg-light"
+                            readonly
+                            value="{{ page.defaultTranslation.subtitle }}"
+                            data-split-view-target="metaSubtitle"
+                        />
+                    </div>
+
+                    <div class="mb-3">
+                        <label class="form-label">Slug</label>
+                        <input
+                            type="text"
+                            class="form-control text-bg-light"
+                            readonly
+                            value="{{ page.defaultTranslation.slug }}"
+                            data-split-view-target="metaSlug"
+                        />
+                    </div>
+
+                    <div class="mb-6">
+                        <label class="form-label">Description</label>
+                        <textarea
+                            class="form-control text-bg-light"
+                            rows="2"
+                            readonly
+                            data-split-view-target="metaDescription"
+                        >{{ page.defaultTranslation.description|striptags }}</textarea>
+                        <div
+                            id="content_translation_description_help"
+                            class="form-text mb-0 help-text"
+                        >
+                            &ensp;<br>
+                            &ensp;
+                        </div>
+                    </div>
+
+                    <div class="ms-4 mt-3">
+                        <div
+                            id="reference-editor"
+                            data-split-view-target="reference"
+                        >
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        {%
+            if not translation and page.translations|length > 0 and form.slug.vars.value is empty
+        %}
+            {{
+                include('@XutimCore/admin/page_translation/new_translation_modal.html.twig', {page: page})
+            }}
+        {% endif %}
     </div>
 {% endblock %}
