fix: display the modal translate article edit window

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/article/article_edit.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/article/article_edit.html.twig
@@ -189,6 +189,13 @@
                     {{
                         include('@XutimCore/admin/content_translation/_form.html.twig')
                     }}
+                    {%
+                        if not translation and article.translations|length > 0 and form.slug.vars.value is empty and form.vars.disabled == false
+                    %}
+                        {{
+                            include('@XutimCore/admin/article_translation/new_translation_modal.html.twig', {article: article})
+                        }}
+                    {% endif %}
                 </div>
 
                 <div
