--- a/src/Xutim/Bundle/CoreBundle/templates/admin/content_fragment/embed.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/content_fragment/embed.html.twig
@@ -1,1 +1,4 @@
-
+<div class="fw-semibold">
+    {{ 'Embed:'|trans({}, '') }} {{ fragment.data.service }}
+</div>
+<div class="small text-secondary">{{ fragment.data.source }}</div>
