--- a/src/Xutim/Bundle/CoreBundle/templates/admin/content_fragment/paragraph.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/content_fragment/paragraph.html.twig
@@ -1,1 +1,5 @@
-<p>{{ fragment.data.text|replace({'<br>': ''})|raw }}</p>
+{% if inlineHtml is defined and inlineHtml %}
+    <p class="diff-inline">{{ inlineHtml|raw }}</p>
+{% else %}
+    <p>{{ fragment.data.text|replace({'<br>': ''})|raw }}</p>
+{% endif %}
