--- a/src/Xutim/Bundle/CoreBundle/templates/admin/content_fragment/block.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/content_fragment/block.html.twig
@@ -1,1 +1,3 @@
-{{ block_render(fragment.data.code, locale) }}
+<span class="fw-bold">{{ 'Block:'|trans({}, '') }}</span>
+lsdkf
+{{ fragment.data.code }}
